CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

PROJECT(Pumpkin)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")

FILE(GLOB_RECURSE SOURCES
    "src/**/*.cc"
    "src/**/*.h"
)

ADD_LIBRARY(Pumpkin SHARED ${SOURCES})

TARGET_PRECOMPILE_HEADERS(Pumpkin PRIVATE src/pheader.hpp)

TARGET_INCLUDE_DIRECTORIES(Pumpkin PRIVATE src)
TARGET_INCLUDE_DIRECTORIES(Pumpkin PRIVATE libs/GLFW/include)
TARGET_INCLUDE_DIRECTORIES(Pumpkin PRIVATE libs/Glad/include)
TARGET_INCLUDE_DIRECTORIES(Pumpkin PRIVATE libs/imgui)
TARGET_INCLUDE_DIRECTORIES(Pumpkin PRIVATE libs/spdlog/include)

FIND_PACKAGE(OpenGL REQUIRED)

if(WIN32)
    target_link_libraries(ImGui PRIVATE opengl32 glfw)
elseif(UNIX)
    target_link_libraries(ImGui PRIVATE OpenGL::GL glfw)
endif()

TARGET_LINK_LIBRARIES(Pumpkin PRIVATE Glad)
TARGET_LINK_LIBRARIES(Pumpkin PRIVATE ImGui)

TARGET_COMPILE_DEFINITIONS(Pumpkin PRIVATE PUMPKIN_LIB GLFW_INCLUDE_NONE)