CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

PROJECT(Pumpkin)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")

FILE(GLOB_RECURSE SOURCES
    "src/**/*.cc"
    "src/**/*.hpp"
    "include/**/*.hpp"
    "libs/glm/glm/**/*.cpp"
    "libs/glm/glm/**/*.hpp"
)

ADD_LIBRARY(Pumpkin STATIC ${SOURCES})

TARGET_PRECOMPILE_HEADERS(Pumpkin PRIVATE src/pheader.hpp)

TARGET_INCLUDE_DIRECTORIES(Pumpkin PRIVATE src)
TARGET_INCLUDE_DIRECTORIES(Pumpkin PRIVATE include)
TARGET_INCLUDE_DIRECTORIES(Pumpkin PRIVATE libs/spdlog/include)
TARGET_INCLUDE_DIRECTORIES(Pumpkin PRIVATE libs/GLFW/include)
TARGET_INCLUDE_DIRECTORIES(Pumpkin PRIVATE libs/Glad/include)
TARGET_INCLUDE_DIRECTORIES(Pumpkin PRIVATE libs/imgui)
TARGET_INCLUDE_DIRECTORIES(Pumpkin PRIVATE libs/glm)

FIND_PACKAGE(OpenGL REQUIRED)

IF(WIN32)
    target_link_libraries(ImGui PRIVATE opengl32 glfw)
ELSEIF(UNIX)
    target_link_libraries(ImGui PRIVATE OpenGL::GL glfw)
ENDIF()

TARGET_LINK_LIBRARIES(Pumpkin PRIVATE Glad)
TARGET_LINK_LIBRARIES(Pumpkin PRIVATE ImGui)

TARGET_COMPILE_DEFINITIONS(Pumpkin PRIVATE PUMPKIN_LIB GLFW_INCLUDE_NONE)
